cloudy/grammar.txt
expr            : KEYWORD:var IDENTIFIER EQ expr
                : comp-expr ((KEYWORD:and|KEYWORD:or) comp-expr)*

comp-expr       : not comp-expr
                : arith-expr ((EE|LT|GT|LTE|GTE|NE) arith-expr)*
        
arith-expr      : term ((PLUS|MINUS) term)*

term            : factor ((MULT|DIV) factor)*

factor          : atom (POW factor)*
                : power

power           : factor ((MULT|DIV) factor)*

atom            : INT|FLOAT|IDENTIFIER|BOOL
                : LPAR expr RPAR
                : if-expr
                : for-expr
                : while-exp

if-expr         : KEYWORD:if expr KEYWORD:then expr
                : (KEYWORD:elif expr KEYWORD:then expr)*
                : (KEYWORD:else expr)? 

for-expr        : KEYWORD:for INDENTIFIER EQ expr KEYWORD:to expr
                  (KEYWORD:skip expr)? KEYWORD:then expr

while-expr      : KEYWORD:while expr KEYWORD:then expr
